# cpack_test

./: CMakeLists.txt  a.py
